--- a/TimeRule WatchKit Extension/Info.plist
+++ b/TimeRule WatchKit Extension/Info.plist
@@ -44,5 +44,7 @@
 	</dict>
 	<key>WKExtensionDelegateClassName</key>
 	<string>ExtensionDelegate</string>
+	<key>WKRunsIndependentlyOfCompanionApp</key>
+	<true/>
 </dict>
 </plist>
